Modified WorldNode rendering to show a grid of planes.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -538,6 +538,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\level.grd"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\resource.h"
 				>
 			</File>
