Initial implementation of debug camera and camera position text.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -593,6 +593,14 @@
 			Name="Common"
 			>
 			<File
+				RelativePath=".\Source\DebugCamera.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\DebugCamera.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\DXUT\DXUT.cpp"
 				>
 				<FileConfiguration
