Added support for animated D3D x files. Adding tiny model.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -705,11 +705,27 @@
 			Name="Scene Graph"
 			>
 			<File
+				RelativePath=".\Source\MeshHierarchyBuilder.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\MeshHierarchyBuilder.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Node.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\Source\Node.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\PlayerAnimatedNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\PlayerAnimatedNode.h"
 				>
 			</File>
 			<File
