Added basic player controls and third-person camera.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -721,6 +721,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\PlayerCamera.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\PlayerCamera.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\PlayerNode.cpp"
 				>
 			</File>
@@ -935,6 +943,10 @@
 		</File>
 		<File
 			RelativePath=".\Source\Game.h"
+			>
+		</File>
+		<File
+			RelativePath=".\README.txt"
 			>
 		</File>
 		<File
