Added debug line. NPC follows player if in line of sight.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -729,6 +729,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\NPCNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\NPCNode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\PlayerCamera.cpp"
 				>
 			</File>
