Added basic minimap.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -721,6 +721,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\MiniMapNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\MiniMapNode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Node.cpp"
 				>
 			</File>
