Added rendering helper class. Made lighting consistent across all nodes.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -763,6 +763,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\RenderData.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\RenderData.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\TeapotNode.cpp"
 				>
 			</File>
