Removed unnecessary effect. General cleanup.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -148,7 +148,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories=""
+				AdditionalIncludeDirectories="&quot;$(IntDir)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				StringPooling="true"
 				ExceptionHandling="1"
@@ -243,7 +243,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories=""
+				AdditionalIncludeDirectories="&quot;$(IntDir)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;PROFILE;_WINDOWS"
 				StringPooling="true"
 				ExceptionHandling="1"
