Adding slinky class.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -992,6 +992,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\Source\SlinkyNode.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Source\SlinkyNode.h"
+			>
+		</File>
+		<File
 			RelativePath=".\Source\WinMain.cpp"
 			>
 		</File>
