Added particle emitter with fountain and spark effects.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -747,6 +747,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ParticleEmitter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ParticleEmitter.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\PlayerCamera.cpp"
 				>
 			</File>
