Added decal manager.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -1019,6 +1019,14 @@
 			RelativePath=".\Source\WinMain.cpp"
 			>
 		</File>
+		<File
+			RelativePath=".\Source\WorldDecalNode.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Source\WorldDecalNode.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
