--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -739,11 +739,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Source\NPCNode.cpp"
+				RelativePath=".\Source\NPCSphereNode.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\NPCNode.h"
+				RelativePath=".\Source\NPCSphereNode.h"
 				>
 			</File>
 			<File
@@ -755,6 +755,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\PlayerBaseNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\PlayerBaseNode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\PlayerCamera.cpp"
 				>
 			</File>
@@ -763,11 +771,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Source\PlayerNode.cpp"
+				RelativePath=".\Source\PlayerTinyNode.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\PlayerNode.h"
+				RelativePath=".\Source\PlayerTinyNode.h"
 				>
 			</File>
 			<File
