Modified particle emitter to produce projectiles. Various state machine updates.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -739,14 +739,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Source\ParticleEmitter.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\ParticleEmitter.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Source\PlayerBaseNode.cpp"
 				>
 			</File>
@@ -768,6 +760,14 @@
 			</File>
 			<File
 				RelativePath=".\Source\PlayerTinyNode.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ProjectileParticles.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ProjectileParticles.h"
 				>
 			</File>
 			<File
