Added pathfinding support to game.

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -794,6 +794,14 @@
 				RelativePath=".\Source\WorldNode.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Source\WorldPath.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\WorldPath.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="GameEngine"
