Added terrain analysis: openness, line of fire, and occupancy

--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -779,6 +779,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\WorldData.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\WorldData.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\WorldFile.cpp"
 				>
 			</File>
@@ -792,14 +800,6 @@
 			</File>
 			<File
 				RelativePath=".\Source\WorldNode.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\WorldPath.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\WorldPath.h"
 				>
 			</File>
 		</Filter>
