--- a/UWGame_2008.vcproj
+++ b/UWGame_2008.vcproj
@@ -715,6 +715,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\GameController.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\GameController.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\MeshHierarchyBuilder.cpp"
 				>
 			</File>
@@ -1045,6 +1053,14 @@
 		</File>
 		<File
 			RelativePath=".\Source\Game.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Source\RotationCamera.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Source\RotationCamera.h"
 			>
 		</File>
 		<File
